control/chameleon_zf90.F90


  interface
     function CHAMELEON_zgesvd_c(jobu,jobvt,M,N,A,LDA,S,U,LDU,VT,LDVT,descT) &
          & bind(c, name='CHAMELEON_zgesvd')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgesvd_c
       integer(kind=c_int), value :: jobu
       integer(kind=c_int), value :: jobvt
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: S
       type(c_ptr), value :: U
       integer(kind=c_int), value :: LDU
       type(c_ptr), value :: VT
       integer(kind=c_int), value :: LDVT
       type(c_ptr), value :: descT
     end function CHAMELEON_zgesvd_c
  end interface

  interface
     function CHAMELEON_zgetmi_c(m,n,A,fin,mb,nb) &
          & bind(c, name='CHAMELEON_zgetmi')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetmi_c
       integer(kind=c_int), value :: m
       integer(kind=c_int), value :: n
       type(c_ptr), value :: A
       integer(kind=c_int), value :: fin
       integer(kind=c_int), value :: mb
       integer(kind=c_int), value :: nb
     end function CHAMELEON_zgetmi_c
  end interface

  interface
     function CHAMELEON_zgetmi_Async_c(m,n,A,f_in,mb,inb,sequence,request) &
          & bind(c, name='CHAMELEON_zgetmi_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetmi_Async_c
       integer(kind=c_int), value :: m
       integer(kind=c_int), value :: n
       type(c_ptr), value :: A
       integer(kind=c_int), value :: f_in
       integer(kind=c_int), value :: mb
       integer(kind=c_int), value :: inb
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgetmi_Async_c
  end interface

  interface
     function CHAMELEON_zgetrf_c(M,N,A,LDA,IPIV) &
          & bind(c, name='CHAMELEON_zgetrf')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrf_c
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: IPIV
     end function CHAMELEON_zgetrf_c
  end interface

  interface
     function CHAMELEON_zgetrf_incpiv_c(M,N,A,LDA,descL,IPIV) &
          & bind(c, name='CHAMELEON_zgetrf_incpiv')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrf_incpiv_c
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descL
       type(c_ptr), value :: IPIV
     end function CHAMELEON_zgetrf_incpiv_c
  end interface

  interface
     function CHAMELEON_zgetrf_nopiv_c(M,N,A,LDA) &
          & bind(c, name='CHAMELEON_zgetrf_nopiv')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrf_nopiv_c
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
     end function CHAMELEON_zgetrf_nopiv_c
  end interface

  interface
     function CHAMELEON_zgetri_c(N,A,LDA,IPIV) &
          & bind(c, name='CHAMELEON_zgetri')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetri_c
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: IPIV
     end function CHAMELEON_zgetri_c
  end interface

  interface
     function CHAMELEON_zgetrs_c(trans,N,NRHS,A,LDA,IPIV,B,LDB) &
          & bind(c, name='CHAMELEON_zgetrs')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrs_c
       integer(kind=c_int), value :: trans
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zgetrs_c
  end interface

  interface
     function CHAMELEON_zgetrs_incpiv_c(trans,N,NRHS,A,LDA,descL,IPIV,B,LDB) &
          & bind(c, name='CHAMELEON_zgetrs_incpiv')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrs_incpiv_c
       integer(kind=c_int), value :: trans
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descL
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zgetrs_incpiv_c
  end interface

  interface
     function CHAMELEON_zheev_c(jobz,uplo,N,A,LDA,W,descT,Q,LDQ) &
          & bind(c, name='CHAMELEON_zheev')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zheev_c
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: W
       type(c_ptr), value :: descT
       type(c_ptr), value :: Q
       integer(kind=c_int), value :: LDQ
     end function CHAMELEON_zheev_c
  end interface

  interface
     function CHAMELEON_zheevd_c(jobz,uplo,N,A,LDA,W,descT,Q,LDQ) &
          & bind(c, name='CHAMELEON_zheevd')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zheevd_c
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: W
       type(c_ptr), value :: descT
       type(c_ptr), value :: Q
       integer(kind=c_int), value :: LDQ
     end function CHAMELEON_zheevd_c
  end interface

  interface
     function CHAMELEON_zhegst_c(itype,uplo,N,A,LDA,B,LDB) &
          & bind(c, name='CHAMELEON_zhegst')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhegst_c
       integer(kind=c_int), value :: itype
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zhegst_c
  end interface

  interface
     function CHAMELEON_zhegv_c(itype,jobz,uplo,N,A,LDA,B,LDB,W,descT,Q,LDQ) &
          & bind(c, name='CHAMELEON_zhegv')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhegv_c
       integer(kind=c_int), value :: itype
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
       type(c_ptr), value :: W
       type(c_ptr), value :: descT
       type(c_ptr), value :: Q
       integer(kind=c_int), value :: LDQ
     end function CHAMELEON_zhegv_c
  end interface

  interface
     function CHAMELEON_zhegvd_c(itype,jobz,uplo,N,A,LDA,B,LDB,W,descT,Q,LDQ) &
          & bind(c, name='CHAMELEON_zhegvd')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhegvd_c
       integer(kind=c_int), value :: itype
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
       type(c_ptr), value :: W
       type(c_ptr), value :: descT
       type(c_ptr), value :: Q
       integer(kind=c_int), value :: LDQ
     end function CHAMELEON_zhegvd_c
  end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zhemm_c(side,uplo,M,N,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='CHAMELEON_zhemm')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhemm_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
       integer(kind=c_int), value :: LDC
     end function CHAMELEON_zhemm_c
  end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zher2k_c(uplo,trans,N,K,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='CHAMELEON_zher2k')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zher2k_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: trans
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: K
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
       real(kind=c_double), value :: beta
       type(c_ptr), value :: C
       integer(kind=c_int), value :: LDC
     end function CHAMELEON_zher2k_c
  end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zherk_c(uplo,trans,N,K,alpha,A,LDA,beta,C,LDC) &
          & bind(c, name='CHAMELEON_zherk')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zherk_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: trans
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: K
       real(kind=c_double), value :: alpha
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       real(kind=c_double), value :: beta
       type(c_ptr), value :: C
       integer(kind=c_int), value :: LDC
     end function CHAMELEON_zherk_c
  end interface
#endif

  interface
     function CHAMELEON_zhetrd_c(jobz,uplo,N,A,LDA,D,E,descT,Q,LDQ) &
          & bind(c, name='CHAMELEON_zhetrd')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhetrd_c
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: D
       type(c_ptr), value :: E
       type(c_ptr), value :: descT
       type(c_ptr), value :: Q
       integer(kind=c_int), value :: LDQ
     end function CHAMELEON_zhetrd_c
  end interface

  interface
     function CHAMELEON_zlacpy_c(uplo,M,N,A,LDA,B,LDB) &
          & bind(c, name='CHAMELEON_zlacpy')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlacpy_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zlacpy_c
  end interface
